# android-space-stars

./: .gitignore  README.md  gradlew  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/jni/: CMakeLists.txt  SDL
app/jni/src/: CMakeLists.txt  main.cpp
